# pyboost_ipc

./: .gitignore  .travis.yml  AUTHORS  CHANGELOG  CMakeLists.txt  LICENSE  README.md  environment.yml
conda.recipe/: bld.bat  build.sh  meta.yaml
conda.recipe/pydebug/: bld.bat  meta.yaml  run_test.py
source/c++/boost_ipc/: _boost_ipc.cpp  api.hpp  api.inl.hpp  containers.cpp  instance_types.cpp  internal.hpp  managed_shared_memory.cpp  message_queue.cpp  shared_memory_object.cpp
source/c++/boost_ipc_tests/: _boost_ipc_tests.cpp
source/c++/pyboost_ipc/: _boost_ipc.cpp  _pyboost_ipc.cpp  api.hpp  api.inl.hpp  containers.cpp  creation_tags.cpp  internal.hpp  managed_shared_memory.cpp  message_queue.cpp  offset_ptrs.cpp  scoped_gil_release.hpp  shared_memory_object.cpp  string.cpp
source/c++/pyboost_ipc_tests/: _boost_ipc_tests.cpp  _pyboost_ipc_tests.cpp
source/python/_tests/: conftest.py  test_creation_tags.py  test_import.py  test_instance_types.py  test_managed_shared_memory.py  test_message_queue.py  test_offset_ptr.py  test_shared_memory_object.py  test_vector.py
